fix: Allow long chip text to wrap (#791)
* Changed css to allow for multiple line chips

* Fixed the multi-line chips so they look better with the small property

* Fixed small padding issue inside of paragraph tags

* Continuation of fixing small padding issue inside of paragraph tags

--- a/src/components/chip/chip.ios.styl
+++ b/src/components/chip/chip.ios.styl
@@ -1,11 +1,10 @@
 .q-chip
-  height $chip-height
+  min-height $chip-height
   padding $chip-padding-horizontal $chip-padding-vertical
   font-size $chip-font-size
   border $chip-border
   border-radius $chip-border-radius
   cursor default
-  white-space nowrap
   vertical-align middle
   color $chip-color
   background $chip-background
@@ -13,6 +12,10 @@
   .q-icon
     font-size $chip-icon-size
     line-height 1
+
+  .q-chip-main
+    padding 8px 0 8px
+    line-height initial
 
   .q-chip-side
     border-radius 50%
@@ -104,7 +107,11 @@
     border-bottom-right-radius 0
 
   &.small
-    height $chip-small-height
+    min-height $chip-small-height
+
+    .q-chip-main
+      padding 4px 0 4px
+      line-height initial
 
     .q-chip-side
       height $chip-small-height
